--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-  <base href="/notification-trigger/">
-  <meta charset="utf-8">
-  <title>NotificationInterface</title>
   <base href="/">
+  <!-- <base href="/notification-interface/"> -->
+  <meta charset="utf-8">
+  <title>Notification Trigger</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
